# application-templates

./: .gitignore  README.md
Docker.Examples/Server.LLM/: llama.cpp.sh
Docker.Examples/Server.RAG/: llama.cpp.embedding.sh
Kotlin.Examples/app/web/site/src/jsMain/kotlin/com/learningbymachine/kkft/web/components/layouts/: PageLayout.kt
Kotlin.Examples/app/web/site/src/jsMain/kotlin/com/learningbymachine/kkft/web/components/sections/: Footer.kt  NavHeader.kt
Kotlin.Examples/app/web/site/src/jsMain/kotlin/com/learningbymachine/kkft/web/pages/: Index.kt  Login.kt  Register.kt
Python.Examples/ModelSurgery/GEMMA_4/: .gitignore
Python.Examples/ModelSurgery/GEMMA_4/HuggingFace/: batch.py  inference.ipynb
Python.Examples/ModelSurgery/GEMMA_4/PyTorch/: .gitignore  conda.sh  config.py  download.sh  model.py  test.toml  weights.py
Python.Examples/ModelSurgery/GEMMA_4_26B-A4B/HuggingFace/: batch.py  inference.ipynb
Python.Examples/ModelSurgery/GEMMA_4_26B-A4B/PyTorch/: .gitignore  api.py  config.py  download.sh  inference.py  model.py  run_batch.py  schemas.py
Python.Examples/ModelSurgery/GPT_OSS/HuggingFace/: inference.ipynb
Python.Examples/ModelSurgery/GPT_OSS/PyTorch/: .gitignore  api.py  model.py  run_batch.py  test.toml  weights.py
Python.Examples/ModelSurgery/GPT_OSS_20B/HuggingFace/: batch.py
Python.Examples/ModelSurgery/GPT_OSS_20B/PyTorch/: config.py  download.sh  inference.py
Python.Examples/ModelSurgery/PHI-4/HuggingFace/: batch.py  inference.ipynb
Python.Examples/ModelSurgery/PHI-4/PyTorch/: .gitignore  api.py  config.py  download.sh  inference.py  model.py  run_batch.py  test.toml  weights.py
Python.Examples/ModelSurgery/QWEN_3.5_35B-A3B/: .gitignore
Python.Examples/ModelSurgery/QWEN_3.5_35B-A3B/HuggingFace/: inference.ipynb
Python.Examples/ModelSurgery/QWEN_3.5_35B-A3B/PyTorch/: config.py  download.sh  inference.py  model.py  run_batch.py  schemas.py  weights.py
Python.Examples/ModelSurgery/QWEN_3.6(5)/HuggingFace/: batch.py  inference.ipynb
Python.Examples/ModelSurgery/QWEN_3.6(5)/PyTorch/: api.py  test.toml
Python.Examples/ModelSurgery/QWEN_3.6_or_3.5_35B-A3B_or_27B/HuggingFace/: .gitignore
Python.Examples/ModelSurgery/QWEN_3.6_or_3.5_35B-A3B_or_27B/PyTorch/: download.sh
Rust.Examples/: Cargo.toml  Makefile  install_tools.sh  trace.json
Rust.Examples/crates/adk_utils/src/session/: postgres.rs  tools.rs
Rust.Examples/crates/agent/: Cargo.toml
Rust.Examples/crates/agent/src/: builder.rs  runner.rs
Rust.Examples/crates/cryptography/: Cargo.toml
Rust.Examples/crates/cryptography/src/: jwt.rs  rsa.rs
Rust.Examples/crates/dioxus_core/: Cargo.toml
Rust.Examples/crates/dioxus_core/src/: lib.rs
Rust.Examples/crates/error/: Cargo.toml
Rust.Examples/crates/error/src/: lib.rs
Rust.Examples/crates/redis/src/: lib.rs
Rust.Examples/crates/state/: Cargo.toml
Rust.Examples/crates/tools/src/: calculator.rs  customer.rs  rag.rs  users.rs
Rust.Examples/libraries/tools/: Cargo.toml
Rust.Examples/libraries/tools/src/: counter.rs
Rust.Examples/services/agent_cli/: Cargo.toml
Rust.Examples/services/agent_cli/src/: main.rs
Rust.Examples/services/dioxus_desktop/: Cargo.toml
Rust.Examples/services/dioxus_mobile/: Cargo.toml
Rust.Examples/services/dioxus_web/: Cargo.toml
Rust.Examples/services/dioxus_web/src/: main.rs
Rust.Examples/services/mcp/src/: handlers.rs  lib.rs
Rust.Examples/services/mcp_debugger/: Cargo.toml
Rust.Examples/services/mcp_debugger/src/: helper.rs  main.rs
Rust.Examples/services/web/: Cargo.toml
Rust.Examples/services/web/src/handlers/: agent.rs  customer.rs  google.rs  knowledge_based.rs  login.rs  user.rs
TypeScript.Example/next_js/: Dockerfile  next.config.ts  package-lock.json  package.json
TypeScript.Example/next_js/app/: globals.css  layout.tsx
TypeScript.Example/next_js/app/(examples)/global_state/: page.tsx
TypeScript.Example/next_js/app/(examples)/products/[id]/: page.tsx
TypeScript.Example/next_js/app/(protected)/: layout.tsx
TypeScript.Example/next_js/app/(protected)/dashboard/: page.tsx
TypeScript.Example/next_js/app/example/docs/[...slug]/: page.tsx
TypeScript.Example/next_js/app/example/table/: page.tsx
TypeScript.Example/next_js/app/login/: page.tsx
TypeScript.Example/next_js/components/auth/: protected-route.tsx
TypeScript.Example/next_js/components/layout/: footer.tsx  header.tsx  provider.tsx
TypeScript.Example/next_js/context/: auth-context.tsx  language-context.tsx  theme-context.tsx
TypeScript.Example/next_js/lib/: translations.ts
TypeScript.Example/next_js/lib/net/: api.tsx  result.tsx
TypeScript.Example/next_js/store/: language-store.ts  theme-store.ts  useAppStore.ts
