[workspace]
resolver = "2"
members = [
  "crates/adk_utils",
  "crates/agent",
  "crates/state",
  "crates/config",
  "crates/cryptography",
  "crates/dto",
  "crates/dioxus_core",
  "crates/error",
  "crates/log",
  "crates/middleware",
  "crates/redis",
  "crates/schema",
  "crates/tools",
  "services/agent_cli",
  "services/dioxus_web",
  "services/dioxus_desktop",
  "services/dioxus_mobile",
  "services/web",
  "services/mcp",
  "services/mcp_debugger",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
awc = "3.8.2"
rsa = "0.9.10"
anyhow = "1.0.102"
rand = "0.10.1"
log = "0.4.33"
tower = "0.5.3"
hyper = "1.10.1"
askama = "0.16.0"
bcrypt = "0.19.2"
dotenv = "0.15.0"
tracing = "0.1.44"
sqlx-core = "0.9.0"
adk-agent = "1.0.0"
adk-core = "1.0.0"
adk-cli = "1.0.0"
adk-runner = "1.0.0"
base64-url = "3.0.4"
mcp-macros = "0.1.0"
env_logger = "0.11.8"
adk-session = "1.0.0"
derive_more = "2.1.1"
adk-artifact = "1.0.0"
rmcp-macros = "1.7.0"
futures-util = "0.3.32"
rust_decimal = "1.38.0"
http-body-util = "0.1.3"
tokio-pg-mapper = "0.2.0"
tokio-postgres = "0.7.18"
postgres-from-row = "0.5.2"
futures = { version = "0.3.32" }
tokio-pg-mapper-derive = "0.2.0"
tokio-util = { version = "0.7.18" }
serde_json = { version = "1.0.150" }
async-trait = { version = "0.1" }
rand08 = {package = "rand", version = "0.8.6"}
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
bigdecimal = { version = "0.4", features = ["serde"] }
adk-rust = { version = "1.0.0", features = ["tools"] }
hyper-util = { version = "0.1.20", features = ["server"] }
deadpool-redis = { version = "0.23.0", features = ["serde"] }
postgres-types = { version = "0.2.14", features = ["derive"] }
schemars = { version = "1.2.1", features = ["derive", "uuid1"] }
tower-http = { version = "0.7.0", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.13.4", features = ["form", "json", "native-tls"] }
adk-tool = { version = "1.0.0", features = ["http-transport"] }
adk-model = { version = "1.0.0", features = ["openai", "ollama"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
jsonwebtoken = { version = "10.4.0", default-features = false, features = [
  "rust_crypto",
] }
dioxus = { version = "0.7.9", features = [
  "signals",
  "macro",
  "html",
  "hooks",
  "router",
  "logger",
  ] }
sqlx = { version = "0.9.0", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "macros",
  "chrono",
  "uuid",
] }
tracing-subscriber = { version = "0.3.23", features = [
  "env-filter",
  "std",
  "fmt",
] }
rmcp = { version = "1.7.0", features = [
  "server",
  "macros",
  "client",
  "transport-io",
  "transport-streamable-http-server",
  "auth",
  "elicitation",
  "schemars",
  "client",
  "reqwest",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
] }

# Internal Libraries
app_adk_utils = { path = "./crates/adk_utils", package = "adk_utils" }
app_agent = { path = "./crates/agent", package = "agent" }
app_config = { path = "./crates/config", package = "config" }
app_cryptography = { path = "./crates/cryptography", package = "cryptography" }
app_dto = { path = "./crates/dto", package = "dto" }
app_error = { path = "./crates/error", package = "error" }
app_log = { path = "./crates/log", package = "log" }
app_state = { path = "./crates/state", package = "state" }
app_middleware = { path = "./crates/middleware", package = "middleware" }
app_redis = { path = "./crates/redis", package = "redis" }
app_schema = { path = "./crates/schema", package = "schema" }
app_tools = { path = "./crates/tools", package = "tools" }
app_llama_cpp = { path = "./crates/llama_cpp", package = "llama_cpp" }
app_dioxus_core = { path = "./crates/dioxus_core", package = "dioxus_core" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
